--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -5,10 +5,6 @@ body, a {
     color: #161616;
 }
 
-.card-category {
-    color: #D73953;
-}
-
-.section-tagline {
+.card-category, .section-tagline {
     color: #D73953;
 }
