Using html tag, fusing section h2 declaration for heading styling

--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,6 +1,11 @@
 /*  Making custom properties in root element,
     Resetting colors with created properties
 */
+
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -15,5 +20,5 @@ body, a {
 }
 
 .card-category, .section-tagline {
-    color: var(--color-primary)
+    color: var(--color-primary);
 }
