--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -1,6 +1,10 @@
 /* body and links foreground color: #161616
    specified class names foreground color: #D73953
 */
+html {
+    scroll-behavior: smooth;
+}
+
 body, a {
     color: #161616;
 }
