Wrapping custom property around var in :root

--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -12,7 +12,7 @@ html {
     --color-white: #ffffff;
     --color-light-gray: #f3f3f3;
     --color-dark-gray: #353535;
-    --text-color: --color-black;
+    --text-color: var(--color-black);
 }
 
 body, a {
