--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,9 +1,17 @@
-/*
- * Making custom properties in root element,
- * Resetting colors with created properties
-*/
+/* Making custom properties in root element,
+Resetting colors with created properties */
+
 html {
     scroll-behavior: smooth;
+}
+
+:root {
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-gray: #f3f3f3;
+    --color-dark-gray: #353535;
+    --text-color: var(--color-black);
 }
 
 body {
@@ -20,13 +28,4 @@ a {
 
 .section-tagline {
     color: var(--color-primary);
-}
-
-:root {
-    --color-primary: #d73953;
-    --color-black: #090909;
-    --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
-    --text-color: var(--color-black);
 }
