--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,7 +1,5 @@
-html {
-    scroll-behavior: smooth;
-}
-
+/* Making custom properties in root element,
+Resetting colors with created properties */
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -9,6 +7,10 @@ html {
     --color-light-gray: #f3f3f3;
     --color-dark-gray: #353535;
     --text-color: var(--color-black);
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
