--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,16 +1,16 @@
-/* Making custom properties in root element,
-Resetting colors with created properties */
+/* Making custom properties in root element
+    Resetting colors with created properties */
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
-}
-
-html {
-    scroll-behavior: smooth;
 }
 
 body {
