--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -11,11 +11,11 @@ html {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
-     --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     --font-size-small: 1.2rem;
@@ -31,7 +31,7 @@ body {
     font-size: var(--font-size-medium);
 }
 
-section h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
 
