--- a/0x02-CSS_advanced/styles/6-style.css
+++ b/0x02-CSS_advanced/styles/6-style.css
@@ -1,7 +1,6 @@
 /* 
     Creating font weight properties
 */
-
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
@@ -11,8 +10,8 @@ html {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
     --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -35,7 +34,7 @@ body {
     font-weight: var(--font-weight-regular);
 }
 
-section h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
 }
