--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -1,7 +1,6 @@
 /*  
     Setting line-height properties
 */
-
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
@@ -37,7 +36,7 @@ body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
-    min-height: var(--line-height-base);
+    line-height: var(--line-height-base);
 }
 
 h1, h2, h3, h4, h5, h6 {
