--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -56,15 +56,15 @@ a[href] {
     text-decoration: none;
 }
 
-a:visited {
-    font-style: italic !important;
+a[href]:visited {
+    font-style: italic;
 }
 
-a:hover {
+a[href]:hover {
     text-decoration: underline;
 }
 
-a:active {
+a[href]:active {
     background-color: var(--color-light-grey);
 }
 
