Changing footer elemeent selector to footer class

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -121,9 +121,10 @@ a:active {
 
 .container {
     width: 960px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto
 }
 
-footer {
+.footer {
     padding: var(--footer-padding);
 }
