--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -109,7 +109,7 @@ a:active {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align)
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -130,7 +130,7 @@ a:active {
 .container {
     width: 960px;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
 
 .footer {
