--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -169,10 +169,10 @@ a:active {
     color: var(--nav-item-link-hover); 
 }
 
-.row {
+ul .row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
