--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -111,7 +111,7 @@ a:active {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align)
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -169,7 +169,7 @@ a:active {
     color: var(--nav-item-link-hover); 
 }
 
-ul .row {
+ul.row {
     margin: 0;
     padding: 0;
     list-style-type: none;
