--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -111,7 +111,7 @@ a:active {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align)
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -219,5 +219,5 @@ ul.row {
 }
 
 .social-link svg {
-    color: var(--text-color);
+    fill: var(--text-color);
 }
