--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -17,8 +17,8 @@ html {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
     --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -99,7 +99,7 @@ a:hover {
 }
 
 a:active {
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .button {
@@ -114,7 +114,7 @@ a:active {
 .button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
+    background: var(--button-hover-background);
 }
 
 .card-category{
@@ -172,7 +172,7 @@ a:active {
 .nav {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
     text-align: center;
 }
 
@@ -197,7 +197,7 @@ a:active {
 ul.row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
@@ -255,7 +255,7 @@ ul.row {
 .card-services a {
     display: block;
     padding: 2rem;
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .card-services a:hover {
@@ -276,7 +276,7 @@ ul.row {
 
 .card-testimonial .card-quote cite {
     display: block;
-    padding: 1rem 0 0 0;
+    padding-top: 1rem;
     color: var(--color-primary);
 }
 
