Using margin bottom

--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -285,7 +285,7 @@ ul.row {
 }
 
 .section-hero .section-title { 
-    margin: 0 0 5rem 0;
+    margin-bottom: 5rem;
 }
 
 .section-hero .section-inner {
