--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -17,8 +17,8 @@ html {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
     --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -106,7 +106,7 @@ a:hover {
 }
 
 a:active {
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .button {
@@ -143,7 +143,7 @@ a:active {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align)
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -179,7 +179,7 @@ a:active {
 .nav {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
     text-align: center;
 }
 
@@ -204,7 +204,7 @@ a:active {
 ul.row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
@@ -262,7 +262,7 @@ ul.row {
 .card-services a {
     display: block;
     padding: 2rem;
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .card-services a:hover {
@@ -283,7 +283,7 @@ ul.row {
 
 .card-testimonial .card-quote cite {
     display: block;
-    padding: 1rem 0 0 0;
+    padding-top: 1rem;
     color: var(--color-primary);
 }
 
@@ -292,7 +292,7 @@ ul.row {
 }
 
 .section-hero .section-title { 
-    margin: 0 0 5rem 0;
+    margin-bottom: rem;
 }
 
 .section-hero .section-inner {
@@ -307,9 +307,9 @@ ul.row {
     position: -var(--header-logo-position);
 }
 
-.header-logo a {
+.header-logo a[link]{
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
+    vertical-align: var(--header-logo-link-top);
+    text-align: var(--header-logo-link-left);
 }
