--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -292,7 +292,7 @@ ul.row {
 }
 
 .section-hero .section-title { 
-    margin-bottom: rem;
+    margin-bottom: 5rem;
 }
 
 .section-hero .section-inner {
