--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -17,8 +17,8 @@ html {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
     --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -106,7 +106,7 @@ a:hover {
 }
 
 a:active {
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .button {
@@ -121,7 +121,7 @@ a:active {
 .button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
+    background: var(--button-hover-background);
 }
 
 .card-category{
@@ -179,7 +179,7 @@ a:active {
 .nav {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
     text-align: center;
 }
 
@@ -204,7 +204,7 @@ a:active {
 ul.row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
@@ -231,7 +231,7 @@ ul.row {
     clear: both;
 }
 
-*[class^="col-"] {
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
@@ -262,7 +262,7 @@ ul.row {
 .card-services a {
     display: block;
     padding: 2rem;
-    background-color: var(--color-light-gray);
+    background-color: var(--color-light-grey);
 }
 
 .card-services a:hover {
@@ -283,7 +283,7 @@ ul.row {
 
 .card-testimonial .card-quote cite {
     display: block;
-    padding: 1rem 0 0 0;
+    padding-top: 1rem;
     color: var(--color-primary);
 }
 
@@ -292,7 +292,7 @@ ul.row {
 }
 
 .section-hero .section-title { 
-    margin: 0 0 5rem 0;
+    margin-bottom: 5rem;
 }
 
 .section-hero .section-inner {
@@ -315,7 +315,7 @@ ul.row {
 }
 
 .nav .nav-link::before {
-    content: "";
+    content: none;
     position: absolute;
     top: 0;
     left: 0;
