--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -208,7 +208,7 @@ ul.row {
 }
 
 .col-1-3 {
-    width:  33.33%;
+    width: 33.33%;
 }
 
 .col-1-2 {
@@ -304,7 +304,7 @@ ul.row {
 }
 
 .header-logo {
-    position: -var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a {
