--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -304,7 +304,7 @@ ul.row {
 }
 
 .header-logo {
-    position: -var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a {
