Adding prev feature fixes

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -304,7 +304,7 @@ ul.row {
 }
 
 .header-logo {
-    position: -var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a[link] {
@@ -321,10 +321,10 @@ ul.row {
     left: 0;
     background-color: var(--color-white);
     width: 0;
-    height: 20%;
+    height: 0.2rem;
 }
 
-.nav .nav-item:hover .nav-link::before  {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
