--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -307,7 +307,7 @@ ul[class="row"] {
 }
 
 .header-logo {
-    position: -var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a[link] {
@@ -324,10 +324,10 @@ ul[class="row"] {
     left: 0;
     background-color: var(--color-white);
     width: 0;
-    height: 20%;
+    height: 0.2rem;
 }
 
-.nav .nav-item:hover .nav-link::before  {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
