--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -184,7 +184,7 @@ a:active {
 .nav {
     margin: 0;
     padding: 0;
-    list-style-type-type: none;
+    list-style-type: none;
     text-align: center;
 }
 
@@ -209,7 +209,7 @@ a:active {
 ul.row {
     margin: 0;
     padding: 0;
-    list-style-type-type: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
@@ -309,7 +309,7 @@ ul.row {
 }
 
 .header-logo {
-    position: -var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a {
@@ -326,11 +326,11 @@ ul.row {
     left: 0;
     background-color: var(--color-white);
     width: 0;
-    height: 20%;
+    height: 0.2rem;
     transition: var(–-transition-duration) var(--transition-cubic-bezier);
 }
 
-.nav .nav-item:hover .nav-link::before  {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
