Fixing inner card title's padding and transitions values

--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -236,7 +236,7 @@ ul.row {
     clear: both;
 }
 
-[class*="col-"] {
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
@@ -327,7 +327,7 @@ ul.row {
     background-color: var(--color-white);
     width: 0;
     height: 0.2rem;
-    transition: var(–-transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-item:hover .nav-link::before {
@@ -353,7 +353,7 @@ ul.row {
     left: -0.1rem;
     right: -0.1rem;
     z-index: 1;
-    transition: var(–-transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
@@ -371,7 +371,7 @@ ul.row {
 .card-work .card-title a {
     display: block;
     text-decoration: none;
-    padding-top: 45%;
+    padding-top: 0.45rem;
 }
 
 .card-work .card-title a::after {
@@ -403,7 +403,7 @@ ul.row {
 
 .card-work:hover .card-image {
     transform: scale(1.2);
-    transition: var(-–transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
