--- a/0x03-sass_scss/12-loop_header.scss
+++ b/0x03-sass_scss/12-loop_header.scss
@@ -1,4 +1,4 @@
-/* create H* tags, where ‘*’ is the size of the font used.*/
+/* create heading tags, where the heading number is the size of the font used.*/
 @for $i from 1 through 5 {
     h#{$i} {
         font-size: 0px + $i;
