--- a/0x03-sass_scss/100-loop_col.scss
+++ b/0x03-sass_scss/100-loop_col.scss
@@ -1,14 +1,19 @@
 /* creates classes with different width */
+
+@mixin widthv($w){
+    width: $w;
+}
+
 @for $i from 1 through 4 {
     .col-#{$i} {
         @if $i == 1 {
-            width: 100%;
+            @include widthv(100%);
         } @else if $i == 2 {
-            width: 50%;
+            @include widthv(50%);
         } @else if $i == 3 {
-            width: 33.3333333333%;
+            @include widthv(33.3333333333%);
         } @else {
-            width: 25%;
+            @include widthv(25%);
         }
     }
 }
