--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -371,9 +371,8 @@
     flex-wrap: wrap; 
   }
 
-  /* Section ABOUT US
-      ============================= */
-  .section-about-us [class^="col"] {
+  /* Section ABOUT US */
+  .section-about-us [class^='col'] {
     align-self: center;
   }
 
