--- a/0x05-form/01-styles.css
+++ b/0x05-form/01-styles.css
@@ -655,15 +655,15 @@ ul.row {
   padding-left: 7rem;
 }
 
-.post-comments .section-title { 
+.post-comments .section-title {
   font-variant: small-caps;
 }
 
 /* Basic form
     ============================= */
-.form {
+form {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0;
+  padding: 1rem;
   margin: 0;
 }
