--- a/0x05-form/04-styles.css
+++ b/0x05-form/04-styles.css
@@ -684,7 +684,7 @@ label {
   padding: 0 0 .5rem;
 }
 
-input[type="text"], input[type="email"], input[type="textarea"] {
+input[type="text"], input[type="email"], textarea {
   position: relative;
   width: 100%;
   padding: 1.2rem;
@@ -699,7 +699,7 @@ input[type="text"], input[type="email"] {
   padding-right: 3rem;
 }
 
-input[type="text"]:focus, input[type="email"]:focus, input[type="textarea"]:focus {
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
   border: .1rem solid var(--color-grey);
 }
 
