Adding declaration for button hover

--- a/0x05-form/06-styles.css
+++ b/0x05-form/06-styles.css
@@ -159,7 +159,7 @@ a:active {
   background: var(--color-primary);
 }
 
-.button-primary {
+.button-primary:hover { 
   color: var(--color-primary);
   background: var(--color-white);
 }
@@ -765,6 +765,7 @@ input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
 
 /* Form error handling
 ============================= */
+
 /* The following code is used to place the icon in the after pseudo element. Because after and before are not possible in an input, we need to use a span that will be positioned on the right of our input. */
 
 input:not(:placeholder-shown) ~ .form-field-icon::after {
