Fixing header and navigation bar backgrouund

--- a/0x06-responsive_design/10-styles.css
+++ b/0x06-responsive_design/10-styles.css
@@ -320,7 +320,7 @@
     padding: var(--header-padding);
     position: relative;
     z-index: 3;
-    background: transparent;
+    background: var(--color-black);
   }
   
   .header-container {
@@ -458,6 +458,16 @@
     justify-content: center;
     min-height: 35vh;
   }
+
+  .article-page .section-hero {
+    margin-top: -8.5rem;
+    padding-top: 5rem;
+  }
+
+  .article-page .header {
+    background: var(--color-black);
+  }
+
   /* Section BLOG
       ============================= */
   
@@ -662,15 +672,6 @@
   
   .main-article {
     padding: 5rem 0;
-  }
-
-  .article-page .section-hero {
-    margin-top: -8.5rem;
-    padding-top: 5rem;
-  }
-
-  .article-page .header {
-    background-color: transparent;
   }
 
   @media screen and (max-width: 767px) {
