FTaking advantange of reusable components and fixing hero section's background

--- a/0x09-implement_a_design_from_scratch/1-styles.css
+++ b/0x09-implement_a_design_from_scratch/1-styles.css
@@ -136,8 +136,7 @@
 
     /* Sections */
     .section {
-        padding: 6rem 1.5rem 2rem;
-        height: 35rem;
+        padding: 6rem 1.5rem 5rem;
     }
 
     .section-header {
@@ -145,6 +144,7 @@
         align-items: center;
         flex-direction: column;
         margin-bottom: 5.5rem;
+        text-align: center;
     }
 
     .section-header h1 {
@@ -158,6 +158,16 @@
         width: 39rem;
     }
 
+    .section-body {
+        display: flex;
+        justify-content: center;
+    }
+
+    .section-body .section-inner {
+        display: flex;
+        flex-direction: row;
+    }
+
     
 /* Hero Section
         ============================= */
@@ -166,18 +176,17 @@
         position: relative;
         padding: 15rem 0;
         background-image: url(images/headphones_hero_1.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 20rem;
         
     }
 
     .section-hero .section-body {
-        display: flex;
-        justify-content: center;
         margin-top: 9rem;
     }
 
     .section-hero .section-body .section-inner {
-        display: flex;
         flex-direction: column;
         align-items: center;
     }
@@ -193,10 +202,6 @@
         font-weight: bold;
     }
     
-    .section-body .section-inner h1 + p + p {
-        width: 39rem;
-    }
-
     .section-body .section-inner .btn {
         font-weight: bold;
         font-size: var(--font-size-x-small);
@@ -218,23 +223,11 @@
         text-align: center;
         margin: 0;
         color: var(--color-white);
+        width: 39rem;
     }
 
     /* Who are We Section
         ============================ */
-    .section-we {
-        position: relative;
-    }
-
-    .section-we .section-body {
-        display: flex;
-        justify-content: center;
-    }
-
-    .section-we .section-body .section-inner {
-        display: flex;
-        flex-direction: row;
-    }
 
     .section-inner .we-icon {
         text-align: center;
@@ -292,13 +285,18 @@
             font-size: var(--font-size-x-small);
         }
 
-        /* Sections */
+        /* Sections
+            ============================ */
          .section-header p {
             text-align: center;
             margin: 0;
             width: auto;
         }
 
+        .section .section-body .section-inner {
+            display: flex;
+            flex-direction: column;
+        }
 
         /* Section Hero */
         .section-hero {
@@ -309,10 +307,12 @@
             padding: 0 1rem;
         }
 
+        .section-hero .section-body .section-inner p {
+            width: auto;
+        }
+
         /* Section We */
         .section-we .section-body .section-inner {
-            display: flex;
-            flex-direction: column;
             width: 15rem;
         } 
 
