--- a/0x09-implement_a_design_from_scratch/0-styles.css
+++ b/0x09-implement_a_design_from_scratch/0-styles.css
@@ -136,8 +136,7 @@
 
     /* Sections */
     .section {
-        padding: 6rem 1.5rem 2rem;
-        height: 35rem;
+        padding: 6rem 1.5rem 5rem;
     }
 
     .section-header {
@@ -145,6 +144,7 @@
         align-items: center;
         flex-direction: column;
         margin-bottom: 5.5rem;
+        text-align: center;
     }
 
     .section-header h1 {
@@ -158,6 +158,16 @@
         width: 39rem;
     }
 
+    .section-body {
+        display: flex;
+        justify-content: center;
+    }
+
+    .section-body .section-inner {
+        display: flex;
+        flex-direction: row;
+    }
+
     
 /* Hero Section
         ============================= */
@@ -166,18 +176,16 @@
         position: relative;
         padding: 15rem 0;
         background-image: url(images/headphones_hero_1.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 20rem;
-        
     }
 
     .section-hero .section-body {
-        display: flex;
-        justify-content: center;
         margin-top: 9rem;
     }
 
     .section-hero .section-body .section-inner {
-        display: flex;
         flex-direction: column;
         align-items: center;
     }
@@ -193,10 +201,6 @@
         font-weight: bold;
     }
     
-    .section-body .section-inner h1 + p + p {
-        width: 39rem;
-    }
-
     .section-body .section-inner .btn {
         font-weight: bold;
         font-size: var(--font-size-x-small);
@@ -218,6 +222,7 @@
         text-align: center;
         margin: 0;
         color: var(--color-white);
+        width: 39rem;
     }
 
     /* 480px Screens
@@ -260,11 +265,17 @@
             font-size: var(--font-size-x-small);
         }
 
-        /* Sections */
+        /* Sections
+            ============================ */
          .section-header p {
             text-align: center;
             margin: 0;
             width: auto;
+        }
+
+        .section .section-body .section-inner {
+            display: flex;
+            flex-direction: column;
         }
 
         /* Section Hero */
@@ -274,5 +285,9 @@
 
         .section-hero .section-body .section-inner {
             padding: 0 1rem;
+        }
+
+        .section-hero .section-body .section-inner p {
+            width: auto;
         }
     }
