--- a/0x09-implement_a_design_from_scratch/1-styles.css
+++ b/0x09-implement_a_design_from_scratch/1-styles.css
@@ -65,12 +65,7 @@
         align-items: center;
     }
 
-    .header-container .header-logo {
-        display: flex;
-        align-items: center;
-    }
-
-    .header-container .header-logo img {
+    .header-logo img {
         width: 161px;
         height: 32px;
     }
@@ -103,7 +98,7 @@
         color: var(--color-primary);
     }
 
-    /* Input check */
+    /* Navicon */
     .header-container .menu-btn, .header-container .menu-icon {
         display: none;
     }
@@ -113,8 +108,12 @@
         height: 0.13rem;
         width: 1.1rem;
         background-color: white;
-        position: relative;
-        margin: 0;
+        position: absolute;
+        margin-left: -9rem;
+    }
+
+    .header-container .menu-btn:checked .section-hero {
+        padding: 15 0;
     }
 
     .header-container .menu-icon .navicon::before, .header-container .menu-icon .navicon::after {
@@ -124,6 +123,7 @@
         width: 1.7rem;
         background-color: white;
         position: absolute;
+        transition: all .2s ease-out;
     }
 
     .header-container .menu-icon .navicon::before {
@@ -133,6 +133,24 @@
     .header-container .menu-icon .navicon::after {
         top: -0.4rem;
     }
+
+    .header-container .menu-btn:checked ~ .menu-icon .navicon {
+        width: 0;
+        height: 0;
+    }
+
+    .header-container .menu-btn:checked ~ .menu-icon .navicon::before {
+        transform: rotate(45deg);
+    }
+
+    .header-container .menu-btn:checked ~ .menu-icon .navicon::after {
+        transform: rotate(-45deg);
+    }
+
+    .header-container .menu-btn:checked ~ .menu-icon .navicon::after, .header-container .menu-btn:checked ~ .menu-icon .navicon::before {
+        top: 0;
+    }
+
 
     /* Sections */
     .section {
@@ -166,6 +184,9 @@
     .section-body .section-inner {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 2rem;
     }
 
     
@@ -231,12 +252,16 @@
 
     .section-inner .we-icon {
         text-align: center;
-        margin-right: 3rem;
         margin-top: 2rem;
+        margin-right: 2rem;
     }
 
     .section-inner .we-icon .font-icon + p {
         font-weight: var(--font-weight-bold);
+    }
+
+    .section-inner .we-icon p {
+        width: 12rem;
     }
 
     .section-inner .we-icon .font-icon {
@@ -245,6 +270,25 @@
         color: var(--color-primary);
     }
 
+    /* 767px Screens
+        ============================ */
+    @media screen and (max-width: 767px) {
+        /* Header */
+        .header-container {
+            padding: 2rem 4rem;
+        }
+        
+        /* We Are Section */
+        .section-inner .we-icon {
+            padding: 1rem;
+        }
+
+        .section-inner .we-icon:nth-child(2), .section-inner .we-icon:nth-child(4){
+            margin-right: 0;
+        }
+    }
+
+
     /* 480px Screens
        ============================= */
 
@@ -252,12 +296,8 @@
         /* Header */
         .header-container {
             margin-top: 1rem;
-            justify-content: start;
+            justify-content: center;
             flex-wrap: wrap;
-        }
-
-        .header-container .header-logo {
-            margin-left: 8rem;
         }
 
         .header-container .menu-icon {
@@ -301,6 +341,10 @@
         /* Section Hero */
         .section-hero {
             background-position: center;
+        }
+
+        .header-container .menu-btn:checked .section-hero {
+            transform: scale(1.5);
         }
 
         .section-hero .section-body .section-inner {
